Le menu reste ouvert + modifs titres + modifs pictos

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
@@ -35,4 +35,12 @@
     $(".classeur-row").click(function (e) {
         document.location.href = Routing.generate('classeur_edit', { id: $(this).data("id") });
     });
+
+    {% block affichemenu %}
+    $(".menu-bleu .entete-menu").each(function(){
+	affiche(this);
+    });
+    {% endblock %}
 </script>
+
+
