--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -42,5 +42,13 @@
 {% endblock %}
 
 {% block losjavascriptos %}
-    <script type="text/javascript" src="{{ asset("/bundles/sesileclasseur/js/newclasseur.js") }}"></script>
+    <script type="text/javascript" src="{{ asset("/bundles/sesileclasseur/js/newclasseur.js") }}">
+
+	{% block affichemenu %}
+	$(".menu-bleu .entete-menu").each(function(){
+	    affiche(this);
+	});
+	{% endblock %}
+
+    </script>
 {% endblock %}
