--- a/src/Sesile/MainBundle/Resources/views/Default/admin.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/admin.html.twig
@@ -24,5 +24,11 @@
             "image": false,
              locale: "fr-FR"
         });
+
+	{% block affichemenu %}
+	$(".menu-vert .entete-menu").each(function(){
+	    affiche(this);
+	});
+	{% endblock %}
     </script>
 {% endblock %}
