--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/gestion.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/gestion.html.twig
@@ -88,4 +88,9 @@
         $(this).addClass("list_selected_element");
     });
 
+	    {% block affichemenu %}
+	    $(".menu-vert .entete-menu").each(function(){
+		affiche(this);
+	    });
+    {% endblock %}
 </script>
