--- a/src/Sesile/DelegationsBundle/Resources/views/Default/edit.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/edit.html.twig
@@ -52,5 +52,13 @@
                 .on('changeDate',function (ev) {
                     checkout.hide();
                 }).data('datepicker');
+
+
+		{% block affichemenu %}
+		$(".menu-jaune .entete-menu").each(function(){
+		    affiche(this);
+		});
+	{% endblock %}
     </script>
+
 {% endblock %}
