--- a/src/Sesile/DelegationsBundle/Resources/views/Default/liste.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/liste.html.twig
@@ -26,3 +26,11 @@
         </tr>
     {% endfor %}
 </table>
+
+<script type="text/javascript">
+    {% block affichemenu %}
+    $(".menu-jaune .entete-menu").each(function(){
+	affiche(this);
+    });
+    {% endblock %}
+</script>
