--- a/src/Sesile/MainBundle/Resources/views/Collectivite/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Collectivite/index.html.twig
@@ -2,38 +2,50 @@
 
 {% block content %}
     <div class="bloc_page">
-        <div class="titre_page">
-            <span class="glyphicon glyphicon-cog"></span>
-            &nbsp;&nbsp;&nbsp;Gestion des collectivités
-        </div>
-        <table class="table tableau">
-            <thead>
-            <tr>
-                <th>Nom</th>
-                <th>Adresse</th>
-                <th>Active</th>
-                <th>Actions</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for coll in collectivites %}
-                <tr class="coll-row">
-                    <td>{{ coll.nom }}</td>
-                    <td>{{ coll.domain }}</td>
-                    <td>{{ coll.active }}</td>
-                    <td class="boutons_action">
-                        <a href="{{ path("edit_collectivite", {'id' : coll.id }) }}">
-                            <span class="glyphicon glyphicon-pencil"></span>
-                        </a>
-                        <a href="{{ path("edit_collectivite", {'id' : coll.id }) }}">
-                            <span class="glyphicon glyphicon-trash"></span>
-                        </a>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-        <br>
-        <a href="{{ path('new_collectivite') }}">Créer une collectivité</a>
+	<div class="titre_page">
+	    <span class="glyphicon glyphicon-cog"></span>
+	    &nbsp;&nbsp;&nbsp;Gestion des collectivités
+	</div>
+	<table class="table tableau">
+	    <thead>
+		<tr>
+		    <th>Nom</th>
+		    <th>Adresse</th>
+		    <th>Active</th>
+		    <th>Actions</th>
+		</tr>
+	    </thead>
+	    <tbody>
+		{% for coll in collectivites %}
+		    <tr class="coll-row">
+			<td>{{ coll.nom }}</td>
+			<td>{{ coll.domain }}</td>
+			<td>{{ coll.active }}</td>
+			<td class="boutons_action">
+			    <a href="{{ path("edit_collectivite", {'id' : coll.id }) }}">
+				<span class="glyphicon glyphicon-pencil"></span>
+			    </a>
+			    <a href="{{ path("edit_collectivite", {'id' : coll.id }) }}">
+				<span class="glyphicon glyphicon-trash"></span>
+			    </a>
+			</td>
+		    </tr>
+		{% endfor %}
+	    </tbody>
+	</table>
+	<br>
+
+	<a href="{{ path('new_collectivite') }}">
+	    <button type="button" class="btn btn-default navbar-btn">
+		Créer une collectivité
+	    </button>
+	</a>
     </div>
+    <script type="text/javascript">
+	{% block affichemenu %}
+	$(".menu-vert .entete-menu").each(function () {
+	    affiche(this);
+	});
+	{% endblock %}
+    </script>
 {% endblock %}
