--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -33,10 +33,9 @@
 
 <div id="maman">
 <div id="gauche">
-    <a href="/">
+    <a href="/app_dev.php/ ">
     <div id="logo">
             <img src="{{ asset("/images/badlogo.png") }}"/>
-
         </div>
     </a>
     {% include 'SesileMainBundle:Default:menu.html.twig' %}
@@ -274,6 +273,9 @@ title="Creative Commons Attributions : <br /> Pas d'utilisation commerciale <br 
 
         $("#footer").width(w_contenu).css({ right: posr_contenu, bottom: 0 });
     }
+
+    {% block affichemenu %}
+    {% endblock %}
 </script>
 </div>
 
