--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -8,19 +8,19 @@
                         D&eacute;l&eacute;gations<b class="caret carette"></b></a>
                 </div>
                 <ul class="dd-menu">
-                    <li>
+                    <li  id="ajoutdunedelegation">
                         <a href="{{ path("delegation_new") }}">
                             <img class="arrows" src="{{ asset("/images/arrowyellow.png") }}"/>
                             Ajout d’une délégation
                         </a>
                     </li>
-                    <li>
+                    <li  id="gererlesdelegations">
                         <a href="{{ path("delegations_list") }}">
                             <img class="arrows" src="{{ asset("/images/arrowyellow.png") }}"/>
                             Gérer les délégations
                         </a>
                     </li>
-                    <li>
+                    <li  id="delegationsrecues">
                         <a href="{{ path("delegations_recues") }}">
                             <img class="arrows" src="{{ asset("/images/arrowyellow.png") }}"/>
                             Délégations reçues
@@ -36,25 +36,25 @@
                         Classeurs<b class="caret carette"></b></a>
                 </div>
                 <ul class="dd-menu">
-                    <li>
+                    <li  id="listedesclasseurs">
                         <a href="{{ path("classeur") }}">
                             <img class="arrows" src="{{ asset("/images/arrowblue.png") }}"/>
                             Liste des classeurs
                         </a>
                     </li>
-                    <li>
+                    <li  id="classeursrecus">
                         <a href="{{ path("index_valider") }}">
                             <img class="arrows" src="{{ asset("/images/arrowblue.png") }}"/>
                             Classeur(s) reçu(s)
                         </a>
                     </li>
-                    <li>
+                    <li id="ajoutdunclasseur">
                         <a href="{{ path("classeur_new") }}">
                             <img class="arrows" src="{{ asset("/images/arrowblue.png") }}"/>
                             Ajout d'un classeur
                         </a>
                     </li>
-                    <li>
+                    <li  id="droitderetractation">
                         <a href="{{ path("index_retractables") }}">
                             <img class="arrows" src="{{ asset("/images/arrowblue.png") }}"/>
                             Droit de retractation
@@ -70,8 +70,9 @@
                         Préférences<b class="caret carette"></b></a>
                 </div>
                 <ul class="dd-menu">
-                    <li>
-                        <a href="{{ path("classeur") }}">
+                    <li  id="notifications">
+			{#TODO : path : notifications in Controller #}
+                        <a href="">
                             <img class="arrows" src="{{ asset("/images/arrowred.png") }}"/>
                             Notifications
                         </a>
@@ -87,44 +88,44 @@
                         Administration<b class="caret carette"></b></a>
                 </div>
                 <ul class="dd-menu">
-                    <li>
+                    <li  id="gestiondescircuits">
                         <a href="{{ path("gestion_circuit") }}">
                             <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
                             Gestion des circuits
                         </a>
                     </li>
-                    <li>
+                    <li  id="typesdeclasseurs">
                         <a href="{{ path("gestion_circuit") }}">
                             <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
                             Types de classeurs
                         </a>
                     </li>
-                    <li>
+                    <li  id="messagedaccueil">
                         <a href="{{ path("admin") }}">
                             <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
                             Message d'accueil
                         </a>
                     </li>
-                    <li>
+                    <li  id="gestiondesutilisateurs">
                         <a href="{{ path("liste_users") }}">
                             <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
                             Gestion des utilisateurs
                         </a>
                     </li>
-		    <li>
+		    <li  id="gestiondesgroupes">
 			<a href="{{ path("groupes") }}">
 			    <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
-			    Gestion des groupes fonctionnels
+			    Gestion des groupes
 			</a>
 		    </li>
-		    <li>
+		    <li  id="organigramme">
 			<a href="{{ path("organigramme") }}">
 			    <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
 			    Organigramme
 			</a>
 		    </li>
                     {% if is_granted('ROLE_SUPER_ADMIN') %}
-                        <li>
+                        <li  id="collectivites">
                         <a href="{{ path("index_collectivite") }}">
                             <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
                             Collectivités
@@ -137,11 +138,19 @@
         </ul>
     </div>
     <script type="text/javascript">
-        $(".entete-menu").click(function () {
-            $(".titremenu").removeClass("titremenu");
-            $(this).addClass("titremenu");
-            $(".dd-menu:visible").slideUp();
-            $(this).next(".dd-menu").slideDown();
+
+	function affiche(e){
+	    $(".titremenu").removeClass("titremenu");
+	    $(e).addClass("titremenu");
+	    $(".dd-menu:visible").hide();
+	    $(e).next(".dd-menu").show();
+	}
+
+	$(".entete-menu").click(function () {
+	    $(".titremenu").removeClass("titremenu");
+	    $(this).addClass("titremenu");
+	    $(".dd-menu:visible").slideUp();
+	    $(this).next(".dd-menu").slideDown();
         });
 
         $(".dd-menu li").click(function () {
