--- a/src/Sesile/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/index.html.twig
@@ -73,6 +73,12 @@
             $(".user-row").click(function () {
                 document.location.href = Routing.generate('user_edit', { id: $(this).data("id") });
             });
+
+	    {% block affichemenu %}
+	    $(".menu-vert .entete-menu").each(function(){
+		affiche(this);
+	    });
+	    {% endblock %}
         </script>
     </div>
 {% endblock %}
