--- a/src/Sesile/UserBundle/Resources/views/Hierarchie/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Hierarchie/edit.html.twig
@@ -27,47 +27,13 @@
 		&nbsp;&nbsp;&nbsp;Créer un groupe fonctionnel
 	    {% endif %}
 	</div>
-
+	{% include 'SesileUserBundle:Hierarchie:legende.organigramme.html.twig' %}
 	<form id="form_hierarchy" method="post" action="{% if groupe is defined %}{{ path("update_groupe") }} {% else %}{{ path("new_groupe") }} {% endif %}">
 	    <div id="edit_service">
 		{% if groupe is defined %}
 		    <input type="hidden" name="id" id="id_groupe" value="{{ groupe.id }}"/>
 		{% endif %}
-		Nom&nbsp;:&nbsp;
-		<input type="text" name="nom" id="nom_groupe"{% if groupe is defined %} value="{{ groupe.Nom }}" {% endif %}/>
-		&nbsp;&nbsp;
-		<button id="btn-envoyer" type="button" class="btn btn-success btn-envoyer sesiletooltip" data-original-title="blabla">
-		    <span class="glyphicon glyphicon-ok" style="color: #ffffff"></span>
-		</button>
-		<button id="btn-annuler" type="button" class="btn btn-danger btn-envoyer">
-		    <span class=" glyphicon glyphicon-remove" style="color: #ffffff"></span>
-		</button>
-	    </div>
-
-	    <div id="toolbar">
-		Utilisateurs&nbsp;:&nbsp;
-		<select id="listUsers">
-		    {% for user in users %}
-			<option value="{{ user.id }}">{{ user.prenom }} {{ user.nom }}</option>
-		    {% endfor %}
-		</select>
-
-		<button type="button" id="addUser" class="btn btn-default btn-envoyer sesiletooltip" data-original-title="blabla">
-		    <span class="glyphicon glyphicon-plus" style="color: #6D6E70"></span>
-		</button>
-
-		<button type="button" id="btnSupprimer" class="btn btn-danger btn-envoyer">
-		    <span class="glyphicon glyphicon-minus" style="color: #ffffff"></span>
-		</button>
-		{% if organigramme is defined %}
-		    <button type="button" id="picker" class="btn btn-default btn-envoyer">
-			<span class="glyphicon glyphicon-star" style="color: #6D6E70;"></span>
-			<span class="textcolor">Couleur</span>
-			<span class="glyphicon glyphicon-star" style="color: #6D6E70;"></span>
-		    </button>
-		{% endif %}
-	    </div>
-
+		{% include 'SesileUserBundle:Hierarchie:tools.html.twig' %}
 	    <br>
 	    {% if groupe is defined %}
 		<script type="text/javascript">
@@ -78,6 +44,7 @@
 
 	    <input type="hidden" name="tree" id="tree"/>
 	</form>
+
     </div>
 
     <script type="text/javascript">
