Orgranigramme : améliorations Types de classeurs

--- a/src/Sesile/ClasseurBundle/Resources/views/TypeClasseur/index.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/TypeClasseur/index.html.twig
@@ -4,7 +4,7 @@
     <div class="bloc_page">
         <div class="titre_page">
             <span class="glyphicon glyphicon-list"></span>
-            &nbsp;&nbsp;&nbsp;Liste des classeurs
+            &nbsp;&nbsp;&nbsp;Types de classeurs
         </div>
 
         <table class="table tableau dtables">
@@ -32,7 +32,7 @@
             {% endfor %}
             </tbody>
         </table>
-        <a href="{{ path('classeur_new') }}">
+        <a href="{{ path('new_type_classeur') }}">
             <button type="button" class="btn btn-default navbar-btn">
                 Créer un type de classeur
             </button>
