--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -94,7 +94,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="{{ path("gestion_circuit") }}">
+                        <a href="{{ path("liste_type_classeur") }}">
                             <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
                             Types de classeurs
                         </a>
