Modifications sur l'ajout d'une délégation et également sur l'édition

--- a/src/Sesile/DelegationsBundle/Resources/views/Default/ajout.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/ajout.html.twig
@@ -34,7 +34,7 @@
         var nowTemp = new Date();
         var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
         var iduserselected = -1;
-        alert(JSON.stringify(recues));
+   //     alert(JSON.stringify(recues));
 
         var id=-1;
 
