--- a/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
@@ -98,6 +98,12 @@
         </div>
         <br/>
 
+        <div class="label_form pickuser">
+            {{ form_label(edit_form.collectivite) }}
+            {{ form_widget(edit_form.collectivite) }}
+        </div>
+        <br/>
+
         <div class="acti">
             <label for="{{ edit_form.enabled.vars.id }}" class="cb-enable selected">
                 <span>Activé</span>
