--- a/web/css/style.css
+++ b/web/css/style.css
@@ -380,6 +380,15 @@ html, body {
 	text-shadow: 0 1px 0 #ffffff;
 }
 
+.delegdo{
+	color:
+
+}
+
+.delegre{
+
+}
+
 select [name=user] {
 	width: 50px;
 }
