--- a/src/Sesile/DelegationsBundle/Resources/views/Default/liste_all.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/liste_all.html.twig
@@ -13,7 +13,7 @@
     </thead>
     {% for delegation in delegations %}
         <tr class="delegation_row {% if loop.index0 % 2 != 0 %}even{% else %}odd{% endif %}">
-            <td></td>
+            <td><span class="glyphicon glyphicon-import delegre"></span></td>
             <td>{{ delegation.delegant.prenom }} {{ delegation.delegant.nom }}</td>
             <td>{{ delegation.debut | date('d/m/Y') }}</td>
             <td>{{ delegation.fin | date('d/m/Y') }}</td>
@@ -28,7 +28,7 @@
 
     {% for delegation in donnees %}
         <tr class="delegation_row {% if loop.index0 % 2 != 0 %}even{% else %}odd{% endif %}">
-            <td></td>
+            <td><span class="glyphicon glyphicon-export delegdo"></span></td>
             <td>{{ delegation.user.prenom }} {{ delegation.user.nom }}</td>
             <td>{{ delegation.debut | date('d/m/Y') }}</td>
             <td>{{ delegation.fin | date('d/m/Y') }}</td>
